...
                                <connections>
                                    <outlet property="delegate" destination="ZHa-KM-sKU" id="1Me-Aw-ZjG"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="obV-Dg-txt">
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="NMy-RR-deb"/>
                                    <constraint firstAttribute="width" constant="48" id="gDe-5j-Vr3"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K0s-Yy-ZbI">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="oZV-ja-8Mm"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                <rect key="frame" x="0.0" y="162" width="393" height="4"/>
                                <color key="tintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="loQ-1o-ZJ8"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="aib-lg-kOL" firstAttribute="top" secondItem="loQ-1o-ZJ8" secondAttribute="top" id="Ffp-05-C1t"/>
                            <constraint firstAttribute="bottom" secondItem="dqt-ZI-uiS" secondAttribute="bottom" id="HW4-86-XmW"/>
                            <constraint firstItem="dqt-ZI-uiS" firstAttribute="leading" secondItem="loQ-1o-ZJ8" secondAttribute="leading" id="KGq-e4-tbA"/>
...
